Fixed Event Page Layout/Implemented Structure for each image
Each image has their own text and button to view more text in the
future. It expands fluidly, but ideally you should not have one box be
too long or else it'll just make the layout look weird. Will add the
modals for viewing more text in next.

--- a/Events/Events.css
+++ b/Events/Events.css
@@ -41,6 +41,11 @@ td
     
 }
 
+div.image_holder
+{
+    font-family: Oswald;
+}
+
 @media only screen and (min-width: 414px) and (max-width: 600px)
 {
     img
